# app/lib/types/content.ts
@@ -14,7 +14,6 @@ export type ContentApi = {
   otherStreamingUrl: string;
   averageStars: number;
   reviewsCount: number;
-  userRating: { stars: number; description: string | null } | null;
   createdAt: string;
   updatedAt: string;
 };
